# JUMCMS-Jahangirnagar-University-Medical-Center-Management-System

./: .gitignore  Makefile  README.md  README.rst  pyproject.toml  requirements.txt
backend/: Makefile  README.rst  pyproject.toml
backend/ambulance/tests/: test_models.py
backend/appointments/: models.py  urls.py
backend/appointments/tests/: test_models.py  test_urls.py
backend/blogs/: models.py
backend/blogs/tests/: test_controllers.py  test_forms.py
backend/certifications/: admin.py  controllers.py  urls.py
backend/certifications/tests/: test_controllers.py
backend/core/: manage.py
backend/core/jumcms/: asgi.py  urls.py
backend/jumcms/: wsgi.py
backend/medical_tests/: apps.py  urls.py
backend/medical_tests/tests/: test_controllers.py
backend/medicines/: admin.py  controllers.py  forms.py  models.py
backend/medicines/tests/: test_controllers.py  test_model.py
backend/static/css/: styles_base_doctors.css  styles_base_home.css
backend/users/: controllers.py  forms.py  models.py  urls.py
backend/users/tests/: test_controllers.py
backend/views/admin/: base_blogs.htm  blog_list.html  create_blog.html  show_requests.html
backend/views/doctors/: patient_information.htm
backend/views/lab_technician/: create_test_report.html  lab_technician_dashboard.htm  lab_technician_dashboard_list.htm  list_of_prescribed_test.html
backend/views/patients/: base_patient.htm  doctor_appointment_list.html  pdf_report_template.html
backend/views/storekeeper/: prescribed_medicine_details.html  prescription_list.html
backend/views/users/: base_home.htm  (+4 more)
(+262 files in other folders)
