[tool.poetry]
name = "jumcms-jahangirnagar-university-medical-center-management-system"
version = "0.1.0"
description = ""
authors = ["sudiptarathi2020 <rathisudipta99@gmail.com>"]
license = "MIT"
readme = "README.rst"

[[tool.poetry.packages]]
include = "backend"

[tool.poetry.dependencies]
python = "^3.11"
asgiref = "^3.8.1"
django = "^5.1.6"
django-cors-headers = "^4.7.0"
django-dotenv = "^1.4.2"
djangorestframework = "^3.15.2"
djangorestframework-simplejwt = "^5.4.0"
pyjwt = "^2.10.1"
pytz = "^2025.1"
setuptools = "^75.8.0"
sqlparse = "^0.5.3"
tzdata = "^2025.1"
pillow = "^11.1.0"
pep8 = "^1.7.1"
sphinx = "^8.1.3"
sphinx-pdj-theme = "^0.5.0"
flake8 = "^7.1.1"
reportlab = "^4.3.0"
xhtml2pdf = "^0.2.16"
django-split-settings = "^1.3.2"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
